--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,9 +44,9 @@
                     android:name="com.rbinnovative.scrollingapp.ui.ScrollingActivity"
                     android:label="@string/app_name"
                     android:theme="@style/Theme.ScrollingApp.NoActionBar"/>
-<!--        <activity-->
-<!--            android:name="com..SignupActivity"-->
-<!--            android:theme="@style/AppTheme.Dark"/>-->
+        <activity
+            android:name="com.rbinnovative.scrollingapp.ui.SignupActivity"
+            android:theme="@style/AppTheme.Dark"/>
     </application>
 
 </manifest>
