--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.google.dagger:dagger-android:2.31'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.31'
     implementation 'com.google.dagger:dagger-android-support:2.10'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
