--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,9 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.31'
     implementation 'com.google.dagger:dagger-android-support:2.10'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+//  Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+// JSON converter Gson for JSON to Java object mapping
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 }
