--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
 // JSON converter Gson for JSON to Java object mapping
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+//  Image download
+    implementation "com.squareup.picasso:picasso:2.8"
 }
