--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.rbinnovative.scrollingapp.ui.MainApplication"
+        android:name="com.rbinnovative.scrollingapp.ui.activity.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +13,7 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.rbinnovative.scrollingapp.ui.LoginActivity"
+            android:name="com.rbinnovative.scrollingapp.ui.activity.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Dark"
             android:windowSoftInputMode="stateHidden">
@@ -25,11 +25,15 @@
         </activity>
 
         <activity
-                    android:name="com.rbinnovative.scrollingapp.ui.ScrollingActivity"
+                    android:name="com.rbinnovative.scrollingapp.ui.activity.ScrollingActivity"
                     android:label="@string/app_name"
                     android:theme="@style/Theme.ScrollingApp.NoActionBar"/>
         <activity
-            android:name="com.rbinnovative.scrollingapp.ui.SignupActivity"
+            android:name="com.rbinnovative.scrollingapp.ui.activity.SignupActivity"
+            android:theme="@style/AppTheme.Dark"/>
+
+        <activity
+            android:name="com.rbinnovative.scrollingapp.ui.activity.DetailedToolActivity"
             android:theme="@style/AppTheme.Dark"/>
 
     </application>
