--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,31 +10,39 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity
             android:name="com.rbinnovative.scrollingapp.ui.activity.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Dark"
             android:windowSoftInputMode="stateHidden">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
         <activity
-                    android:name="com.rbinnovative.scrollingapp.ui.activity.ScrollingActivity"
-                    android:label="@string/app_name"
-                    android:theme="@style/Theme.ScrollingApp.NoActionBar"/>
+            android:name="com.rbinnovative.scrollingapp.ui.activity.ScrollingActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ScrollingApp.NoActionBar">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
         <activity
             android:name="com.rbinnovative.scrollingapp.ui.activity.SignupActivity"
-            android:theme="@style/AppTheme.Dark"/>
+            android:theme="@style/AppTheme.Dark" />
 
         <activity
             android:name="com.rbinnovative.scrollingapp.ui.activity.DetailedToolActivity"
-            android:theme="@style/AppTheme.Dark"/>
-
+            android:theme="@style/ComponentAppTheme" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
