--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -31,6 +33,7 @@ android {
 dependencies {
 //  UI
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0-beta01'
 
@@ -45,7 +48,8 @@ dependencies {
 //  Dagger
     implementation 'com.google.dagger:dagger:2.31'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.31'
-    // for acitivities
+
+    // for activities
     implementation 'com.google.dagger:dagger-android:2.31'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.31'
     implementation 'com.google.dagger:dagger-android-support:2.10'
@@ -57,4 +61,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 //  Image download
     implementation "com.squareup.picasso:picasso:2.8"
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
