--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rbinnovative.scrollingapp">
+    package="com.rbinnovative.rentalotool">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.rbinnovative.scrollingapp.ui.activity.MainApplication"
+        android:name="com.rbinnovative.rentalotool.ui.activity.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name="com.rbinnovative.scrollingapp.ui.activity.LoginActivity"
+            android:name="com.rbinnovative.rentalotool.ui.activity.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Dark"
             android:windowSoftInputMode="stateHidden">
@@ -24,7 +24,7 @@
         </activity>
 
         <activity
-            android:name="com.rbinnovative.scrollingapp.ui.activity.ScrollingActivity"
+            android:name="com.rbinnovative.rentalotool.ui.activity.ScrollingActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.ScrollingApp.NoActionBar">
 <!--            <intent-filter>-->
@@ -33,11 +33,11 @@
 <!--            </intent-filter>-->
         </activity>
         <activity
-            android:name="com.rbinnovative.scrollingapp.ui.activity.SignupActivity"
+            android:name="com.rbinnovative.rentalotool.ui.activity.SignupActivity"
             android:theme="@style/AppTheme.Dark" />
 
         <activity
-            android:name="com.rbinnovative.scrollingapp.ui.activity.DetailedToolActivity"
+            android:name="com.rbinnovative.rentalotool.ui.activity.DetailedToolActivity"
             android:theme="@style/ComponentAppTheme" >
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
