--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
 //  Testing
     testImplementation 'junit:junit:4.+'
