--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,19 +17,19 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Dark"
             android:windowSoftInputMode="stateHidden">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.rbinnovative.rentalotool.ui.activity.ScrollingActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.ScrollingApp.NoActionBar">
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
+        </activity>
+        <activity
+            android:name="com.rbinnovative.rentalotool.ui.activity.LandingScrollingActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ScrollingApp.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.rbinnovative.rentalotool.ui.activity.SignupActivity"
