--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,46 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rbinnovative.rentalotool">
+    package="com.rbinnovative.rentalotool" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.rbinnovative.rentalotool.ui.activity.MainApplication"
+        android:name=".ui.activity.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
+
         <activity
-            android:name="com.rbinnovative.rentalotool.ui.activity.LoginActivity"
+            android:name=".ui.activity.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Dark"
-            android:windowSoftInputMode="stateHidden">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            android:windowSoftInputMode="stateHidden" >
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name="com.rbinnovative.rentalotool.ui.activity.LandingScrollingActivity"
+            android:name=".ui.activity.LandingScrollingActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ScrollingApp.NoActionBar">
+            android:theme="@style/Theme.ScrollingApp.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.rbinnovative.rentalotool.ui.activity.SignupActivity"
+            android:name=".ui.activity.SignupActivity"
             android:theme="@style/AppTheme.Dark" />
         <activity
-            android:name="com.rbinnovative.rentalotool.ui.activity.DetailedToolActivity"
+            android:name=".ui.activity.DetailedToolActivity"
             android:theme="@style/ComponentAppTheme" >
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
+
 </manifest>
