add action bar and fix available dates

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         <activity
             android:name=".ui.activity.DetailedToolActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"
+            android:theme="@style/ComponentAppTheme"
             >
 
             <!-- <intent-filter> -->
