--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,9 +40,7 @@
         <activity
             android:name=".ui.activity.DetailedToolActivity"
             android:label="@string/app_name"
-            android:theme="@style/ComponentAppTheme"
-            >
-
+            android:theme="@style/AppTheme" >
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
